tests/dfrouter/errors/false_output_directory/options.dfrouter
--include-unused-routes --measure-files input_tri_flows.txt --keep-longer-routes --net-file=input_tri.net.xml --detector-files=input_tri.det.xml --routes-output routes.rou.xml --emitters-output invalid/emitters.add.xml -e 60